refactor claiming procedure

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,6 @@
 		<h1>Welcome</h1>
 	</header>
 
-	<p>Please import the course repository in the database for the first time.</p>
+	<p>This course website is empty. You can bootstrap it by specifying a git repository and importing it.</p>
 
 </div>
