allow user specification of git repo

--- a/app/views/config/git.html.erb
+++ b/app/views/config/git.html.erb
@@ -5,10 +5,14 @@
 	</header>
 
 	<p>
-		<%= form_tag(action: 'save_git_repo', class:'form-horizontal') do %>
-			<%= text_field_tag 'repo_url', Settings['git.repo_url'], required: true %>
+		<%= form_tag(config_git_repo_url, class:'form-horizontal') do %>
+			<%= text_field_tag 'repo_url', Settings['git_repo'], required: true %>
 			<%= submit_tag 'Change', class:'btn' %>
 		<% end %>
+	</p>
+	
+	<p>
+		Warning: you can only clone a repository once. Changing this value after cloning has no effect.
 	</p>
 
 </div>
