--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -19,34 +19,32 @@
 	<% end %>
 	<% if current_user.is_admin? %>
 	<li><%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Update courseware...'.html_safe, course_import_path, method: :post %></li>
-	<li><%= link_to '<i class="glyphicon glyphicon-stats"></i> Administration'.html_safe, admin_path %></li>
 	<li><%= link_to '<i class="glyphicon glyphicon-wrench"></i> Configuration'.html_safe, config_path %></li>
 	<li class="divider"></li>
 	<li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, course_grades_path %></li>
-	<li><%= link_to '<i class="glyphicon glyphicon-list"></i> Grading list'.html_safe, grading_path %></li>
+	<li><%= link_to '<i class="glyphicon glyphicon-stats"></i> Administration'.html_safe, admin_path %></li>
 	<li class="divider"></li>
 	<% if Settings.public_grades %>
-	<li><%= link_to '<i class="glyphicon glyphicon-eye-open"></i> Grades are public'.html_safe, course_toggle_public_grades_path, method: :post %></li>
+	<li><%= link_to '<i class="glyphicon glyphicon-ok"></i> Show grades to students'.html_safe, course_toggle_public_grades_path, method: :post %></li>
 	<% else %>
-	<li><%= link_to '<i class="glyphicon glyphicon-eye-close"></i> Grades are hidden'.html_safe, course_toggle_public_grades_path, method: :post %></li>
+	<li><%= link_to '<i class="glyphicon empty"></i> Show grades to students'.html_safe, course_toggle_public_grades_path, method: :post %></li>
 	<% end %>
 	<% if Settings.allow_grading %>
-	<li><%= link_to '<i class="glyphicon glyphicon-thumbs-up"></i> Grading is allowed'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
+	<li><%= link_to '<i class="glyphicon glyphicon-ok"></i> Allow grading'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
 	<% else %>
-	<li><%= link_to '<i class="glyphicon glyphicon-thumbs-down"></i> Grading is not allowed'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
+	<li><%= link_to '<i class="glyphicon empty"></i> Allow grading'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
 	<% end %>
 	<% if Settings.send_grade_mails %>
-	<li><%= link_to '<i class="glyphicon glyphicon-envelope"></i> Will send grade emails'.html_safe, course_toggle_send_grade_mails_path, method: :post %></li>
+	<li><%= link_to '<i class="glyphicon glyphicon-ok"></i> Send grade emails'.html_safe, course_toggle_send_grade_mails_path, method: :post %></li>
 	<% else %>
-	<li><%= link_to '<i class="glyphicon glyphicon-envelope"></i> Will not send grade emails'.html_safe, course_toggle_send_grade_mails_path, method: :post %></li>
+	<li><%= link_to '<i class="glyphicon empty"></i> Send grade emails'.html_safe, course_toggle_send_grade_mails_path, method: :post %></li>
 	<% end %>
 	<li class="divider"></li>
 	<% end %>
-	<% if current_user.is_assistant? %>
-	<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading'.html_safe, grading_path %></li>
-	<% else %>
-	<li><%= link_to '<i class="glyphicon glyphicon-list"></i> Grades'.html_safe, profile_grades_path %></li>
+	<% if current_user.is_assistant? or current_user.is_admin? %>
+	<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, grading_path %></li>
 	<% end %>
+	<li><%= link_to '<i class="glyphicon glyphicon-list"></i> View grades'.html_safe, profile_grades_path %></li>
 	<li class="divider"></li>
 	<li><%= link_to '<i class="glyphicon glyphicon-phone"></i> Pair with phone'.html_safe, profile_pair_path %></li>
 	<li><%= link_to '<i class="glyphicon glyphicon-ban-circle"></i> Logout'.html_safe, profile_logout_path %></li>
