--- a/app/views/profile/grades.html.erb
+++ b/app/views/profile/grades.html.erb
@@ -39,7 +39,7 @@
 	
 	<% else %>
 	
-	Grades are currently hidden, but should be published after the weekend.
+	Grades are currently hidden.
 	
 	<% end %>
 
