background for blockquote

--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -243,8 +243,8 @@ section ul p + p, section ol p + p
 section blockquote
 {
 	border:0;
-	margin:1.5em 0;
-	padding:0 2.5em;
+	background-color:#F9F9F9;
+	padding:1em;
 }
 
 section blockquote p
