--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -245,7 +245,7 @@ section blockquote
 	border:0;
 	background-color:#F9F9F9;
 	padding:1em;
-	margin-bottom:0;
+	margin-bottom:0.5em;
 }
 
 section blockquote p
