--- a/app/views/course/_grade_table.html.erb
+++ b/app/views/course/_grade_table.html.erb
@@ -10,7 +10,6 @@
 		<% psets.each do |pset| %>
 		<th class="rotate"><div><%= pset.name %></div></th>
 		<% end %>
-		<th class="rotate">final</th>
 		<th>
 			<form method="get" accept-charset="utf-8">
 				<%= select_tag :term, 
@@ -57,10 +56,9 @@
 			<% if subs[pset.id] %>
 				<% submitted = subs[pset.id][0] %>
 				<% if submitted.grade and not submitted.grade.grade.blank? %>
-				<%= link_to "#{submitted.grade.grade}", grade_form_path(user_id: user.id, pset_id: pset.id), class: "btn btn-xs btn-block #{0 <= submitted.grade.grade && submitted.grade.grade < 5.5 ? 'btn-danger':'btn-success'}" %>
-				<% if pset.weight
-					grade += submitted.grade.grade; weight += pset.weight
-					end %>
+				<% grade = submitted.grade.grade %>
+				<% grade = (grade / 10.0).round(1) if pset.grade_type == 'float' %>
+				<%= link_to "#{grade}", grade_form_path(user_id: user.id, pset_id: pset.id), class: "btn btn-xs btn-block #{0 <= grade && grade < 5.5 ? 'btn-danger':'btn-success'}" %>
 				<% else %>
 				<%= link_to 'sub', grade_form_path(user_id: user.id, pset_id: pset.id), class: 'btn btn-default btn-xs btn-block' %>
 				<% end %>
@@ -69,9 +67,6 @@
 			<% end %>
 		</td>
 		<% end %>
-		<td>
-			<%= 1.0 * grade / weight %>
-		</td>
 		<td><%= best_in_place user, :term  , as: :input, url: user_path(id: user.id) %></td>
 		<td><%= best_in_place user, :status, as: :input, url: user_path(id: user.id) %></td>
 		<td><%= best_in_place user, :active, as: :checkbox, url: user_path(id: user.id) %></td>
