move formatting to helper

--- a/app/views/course/_table.html.erb
+++ b/app/views/course/_table.html.erb
@@ -52,7 +52,7 @@
 		</td>
 		<% end %>
 
-		<% subs = user.submits.includes(:grade).all.group_by(&:pset_id) %>
+		<% subs = user.submits.group_by(&:pset_id) %>
 		<% psets.each do |pset| %>
 		<td>
 			<%= grade_button(user, pset, subs)%>
