new layout, ama

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,10 +13,9 @@
 
 $link-color: #CCA300;
 
-$navbar-default-bg: #fc0;
-
-$navbar-default-color: #7F6E26;
-$navbar-default-link-color: #7F6E26;
+$navbar-default-bg: #aa9971;
+$navbar-default-color: #f7faff;
+$navbar-default-link-color: #f7faff;
 
 $component-active-bg: #7F6600;
 
