--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,10 +1,9 @@
-<div class="row">
-	<div id="desktop" class="col-sm-12">
-		<div class="row">
-			<div class="col-sm-12" id="content">
+<div style="display:-webkit-flex;">
+
+	<div id="desktop" style="-webkit-flex:1; -webkit-justify-content: center; justify-content: center;   display: -webkit-flex; display: flex; overflow:scroll">
+			<div id="content" style="max-width:60em;">
 				<%= render 'content' %>
 			</div>
-		</div>
 	</div>
 </div>
 
