--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
-			<% if logged_in? && current_user.schedule %>
+			<% if logged_in? && current_user.schedule && current_user.schedule.schedule_spans %>
 			<li class="dropdown dropdown-accordion">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-time"></span></a>
 				<ul class="dropdown-menu" id="user-menu" style="min-width:300px; padding-top:0.25em">
