--- a/app/views/page/_content.html.erb
+++ b/app/views/page/_content.html.erb
@@ -4,38 +4,26 @@
 </div>
 <% end %>
 
-<header class="page-header">
+<header>
+	<div class="page-header">
 	<h1><%= title %></h1>
-	<% if @page.pset or @page.subpages.count > 1 %>
-	<ul class="nav nav-pills">
-		<% @page.subpages.each_with_index do |subpage, index| %>
-		<li class="<%= 'active' if index == 0 %>">
-			<a href="#<%= subpage.slug %>" data-target="#<%= subpage.slug %>-content" data-toggle="tab"><%= subpage.title %></a>
-		</li>
-		<% end %>
-		<% if current_user.can_submit? and @page.pset %>
-		<li>
-			<a href="#submit" data-target="#submit-content" data-toggle="tab">Submit <%= submitted_icon %></a>
-		</li>
-		<% end %>
-	</ul>
-	<% end %>
+	</div>
 </header>
 
 <%= form_tag_if(logged_in? && @page.pset, page_submit_url, { :multipart => true, :id => "page_form" }) do %>
 <%= hidden_field_tag :page_id, @page.id %>
-<div class="tab-content">
 
 	<% @page.subpages.each_with_index do |subpage, index| %>
-	<section class="tab-pane markdown <%= 'active' if index == 0 %>" id="<%= subpage.slug %>-content">
+	<section class="markdown" id="<%= subpage.slug %>-content">
 		<%= markdown(subpage.content, @page) %>
 	</section>
 	<% end %>
 
 	<% if current_user.can_submit? and @page.pset %>
-	<section class="tab-pane markdown" id="submit-content">
+	<section class="markdown" id="submit-content">
 		<%= render 'submit_tab' %>
 	</section>
 	<% end %>
-</div>
+
+
 <% end %>
