--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,7 @@
 			showProcessingMessages: false
 		});
 	</script>
-	<script type="text/javascript"
-	  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML.js">
-	</script>
+	<%= mathjax_tag %>
 </head>
 <body>
 
