--- a/app/views/layouts/profile.html.erb
+++ b/app/views/layouts/profile.html.erb
@@ -15,7 +15,11 @@
 	
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
-			showProcessingMessages: false
+			showProcessingMessages: false,
+		    tex2jax: {
+		          inlineMath: [ ['$','$'] ],
+		          processEscapes: true
+		        }
 		});
 	</script>
 	<script type="text/javascript"
