mathjax simply as latex

--- a/app/views/layouts/profile.html.erb
+++ b/app/views/layouts/profile.html.erb
@@ -15,11 +15,7 @@
 	
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
-			showProcessingMessages: false,
-		    tex2jax: {
-		          inlineMath: [ ['$','$'] ],
-		          processEscapes: true
-		        }
+			showProcessingMessages: false
 		});
 	</script>
 	<script type="text/javascript"
