--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,4 +1,4 @@
-<div id="content" style="max-width:60em;" class="container">
+<div id="content" class="container">
 	<%= render 'content' %>
 </div>
 
