--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -6,6 +6,17 @@
 	font-size:16px;
 }
 
+.page-header h1
+{
+	font-size:30px;
+}
+
+section h1
+{
+	padding-bottom:9px;
+	border-bottom: 1px solid #eeeeee;
+}
+
 #content table
 {
 	font-size:15px;
