--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -355,7 +355,7 @@ footer img
 	{
 		margin-left:0;
 		margin-right:0;
-		padding:0;
+		padding:1em 0;
 		border-top:1px solid black;
 		border-bottom:1px solid black;
 	}
