--- a/app/views/layouts/full-width.html.erb
+++ b/app/views/layouts/full-width.html.erb
@@ -15,10 +15,8 @@
 
 <body>
 	<%= render 'layouts/navbar' %>
-	<div id="content" class="container limit-width">
-		<section>
+	<div id="content" class="container-fluid">
 		<%= yield %>
-		</section>
 	</div>
 	<%= render 'layouts/footer' %>
 	<div id="popup"></div>
