--- a/app/views/config/git.html.erb
+++ b/app/views/config/git.html.erb
@@ -1,18 +1,16 @@
-<div id="content">
+<h1>Git connection</h1>
 
-	<header class="page-header">
-		<h1>Git connection</h1>
-	</header>
-
-	<p>
-		<%= form_tag(config_git_repo_url, class:'form-horizontal') do %>
-			<%= text_field_tag 'repo_url', Settings['git_repo'], required: true %>
-			<%= submit_tag 'Change', class:'btn' %>
-		<% end %>
-	</p>
+<p>
+	<%= form_tag(config_git_repo_url, class:'form') do %>
+    <div class="form-group">
 	
-	<p>
-		Warning: you can only clone a repository once. Changing this value after cloning has no effect.
-	</p>
+	<%= text_field_tag 'repo_url', Settings['git_repo'], required: true, class: 'form-control' %>
+	</div>
+	<%= submit_tag 'Change', class:'btn btn-primary' %>
+	<% end %>
+</p>
+	
+<p>
+	Warning: you can only clone a repository once. Changing this value after cloning has no effect.
+</p>
 
-</div>
