--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -295,10 +295,8 @@ form .btn
 
 footer
 {
-	padding-top:15px;
-	padding-bottom:15px;
-	text-align: center;
-	border-top:1px solid #ddd;
+	padding-bottom:1em;
+	text-align:center;
 }
 
 footer img
