--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,15 +13,15 @@
 			<% if logged_in? && current_user.schedule && current_user.schedule.schedule_spans %>
 			<li class="dropdown dropdown-accordion">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-time"></span></a>
-				<ul class="dropdown-menu" id="user-menu" style="min-width:300px; padding-top:0.25em">
+				<ul class="dropdown-menu" id="user-menu">
 					<%= render 'layouts/schedule' %>
 				</ul>
 			</li>
 			<% end %>
 
 			<li class="dropdown dropdown-accordion">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-paperclip"></span></a>
-				<ul class="dropdown-menu" id="user-menu" style="min-width:300px; padding-top:0.25em">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-search"></span></a>
+				<ul class="dropdown-menu" id="user-menu">
 					<%= render 'layouts/materials' %>
 				</ul>
 			</li>
@@ -29,7 +29,7 @@
 			<% if logged_in? and @alerts.count > 0 %>
 			<li class="dropdown dropdown-accordion">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-bell"></span><span class=""><%= @alerts.count %></span></a>
-				<ul class="dropdown-menu" id="user-menu" style="min-width:300px; padding-top:0.25em">
+				<ul class="dropdown-menu" id="user-menu">
 					<%= render 'layouts/alerts' %>
 				</ul>
 			</li>
