way better margins for embeds

--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -167,8 +167,7 @@ section blockquote
 
 section .embed
 {
-	margin-left:-2em;
-	margin-right:-2em;
+	margin:2em -2em;
 }
 
 section blockquote:first-child, section .embed:first-child
