--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
 			<% if logged_in? && current_user.schedule && current_user.schedule.schedule_spans %>
 			<li class="dropdown dropdown-accordion">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-time"></span></a>
-				<ul class="dropdown-menu" id="user-menu">
+				<ul class="dropdown-menu">
 					<%= render 'layouts/schedule' %>
 				</ul>
 			</li>
@@ -21,7 +21,7 @@
 
 			<li class="dropdown dropdown-accordion">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-search"></span></a>
-				<ul class="dropdown-menu" id="user-menu">
+				<ul class="dropdown-menu">
 					<%= render 'layouts/materials' %>
 				</ul>
 			</li>
@@ -29,7 +29,7 @@
 			<% if logged_in? and @alerts.count > 0 %>
 			<li class="dropdown dropdown-accordion">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-bell"></span><span class=""><%= @alerts.count %></span></a>
-				<ul class="dropdown-menu" id="user-menu">
+				<ul class="dropdown-menu">
 					<%= render 'layouts/alerts' %>
 				</ul>
 			</li>
@@ -41,7 +41,7 @@
 			<% if Settings.mail_address && current_user.valid_profile? %>
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-question-sign"></span> Ask</a>
-				<ul class="dropdown-menu" id="user-menu" style="min-width:300px;">
+				<ul class="dropdown-menu" style="min-width:300px;">
 					<%= render 'layouts/ama' %>
 				</ul>
 			</li>
