properly display ack again

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <% if @page %>
 <footer>
 	<%= Settings.display_license.html_safe if Settings.display_license %>
-	<a rel="tooltip" data-placement="top" title="<%= simple_markdown(Settings.display_acknowledgements.join("\n\n")).html_safe if Settings.display_acknowledgements %>">Acknowledgements.</a>
+	<a data-toggle="tooltip" data-placement="top" title="<%= Settings.display_acknowledgements.join("\n\n").html_safe if Settings.display_acknowledgements %>">Acknowledgements.</a>
 </footer>
 <% end %>
 
@@ -14,7 +14,13 @@
 	
 	$('.profile-form').click(function(e) {
 	    e.stopPropagation();
-	})
+	});
 	
 	</script>
 <% end %>
+
+<script type="text/javascript">
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+});
+</script>
