--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,12 +19,14 @@
 			</li>
 			<% end %>
 
+            <% if @sections.length > 0 %>
 			<li class="dropdown dropdown-accordion">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-search"></span></a>
 				<ul class="dropdown-menu">
 					<%= render 'layouts/materials' %>
 				</ul>
 			</li>
+            <% end %>
 
 			<% if logged_in? and @alerts.count > 0 %>
 			<li class="dropdown dropdown-accordion">
