--- a/app/views/config/git.html.erb
+++ b/app/views/config/git.html.erb
@@ -6,7 +6,7 @@
 	
 	<%= text_field_tag 'repo_url', Settings['git_repo'], required: true, class: 'form-control' %>
 	</div>
-	<%= submit_tag 'Change', class:'btn btn-primary' %>
+	<%= submit_tag 'Clone', class:'btn btn-primary' %>
 	<% end %>
 </p>
 	
