--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,3 @@
-<div id="content">
+<h1>Welcome</h1>
 
-	<header class="page-header">
-		<h1>Welcome</h1>
-	</header>
-
-	<p>This course website is empty. You can bootstrap it by specifying a git repository and importing it.</p>
-
-</div>
+<p>This course website is empty. You can bootstrap it by specifying a <%= link_to "git repository", config_git_path %> and importing it.</p>
