--- a/app/views/layouts/_schedule.html.erb
+++ b/app/views/layouts/_schedule.html.erb
@@ -13,9 +13,9 @@
 				<% schedule.content.each do |item, link|  %>
 				<% next if item == 'description' %>
                 <% if link.nil? %>
-                    <div class="list-group-item"><%= item.sub('[', '<span class="label label-info">').sub(']', '</span>').html_safe %></div>
+                    <div class="list-group-item"><%= item.sub('[', '<span class="badge">').sub(']', '</span>').html_safe %></div>
                 <% else %>
-    				<%= link_to item.sub('[', '<span class="label label-info">').sub(']', '</span>').html_safe, link, class:'list-group-item' %>
+    				<%= link_to item.sub('[', '<span class="badge">').sub(']', '</span>').html_safe, link, class:'list-group-item' %>
                 <% end %>
 				<% end %>
 			</div>
