--- a/app/views/config/admins.html.erb
+++ b/app/views/config/admins.html.erb
@@ -1,7 +1,7 @@
 <h1>Admins</h1>
 
 <p>	
-	<%= form_tag(config_admins_url, method: :post) do %>
+	<%= form_tag(config_admins_path, method: :post) do %>
 	<div class="form-group">
 		<label for="inputAdmins">Admins</label>
 		<textarea id="inputAdmins" name="admins" class="form-control" style="height:10em;"><%= @admins %></textarea>
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-	<%= form_tag(config_assistants_url, method: :post) do %>
+	<%= form_tag(config_assistants_path, method: :post) do %>
 	<div class="form-group">
 		<label for="inputAdmins">Assistants</label>
 		<textarea id="inputAdmins" name="assistants" class="form-control" style="height:10em;"><%= @assistants %></textarea>
