--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -87,8 +87,7 @@ body
 
 #content > #submitted_pset
 {
-	margin:-2em -2em 0 -2em;
-	border:0; border-radius:0;
+	border-radius:0;
 }
 
 .form-inline input[type=number]
